examples/valid/expressions/ordAndtoIntExpr.wacc
# evalutaing ord and toInt
# Output:
# a is 97
# 99 is c

#Program:#

begin
  char a = 'a' ;
  int i = 99 ;
  
  print a ;
  print " is " ;
  println toInt a ;
  
  print i ;
  print " is " ;
  println ord i
end


